--- a/inscription.html
+++ b/inscription.html
@@ -1,1 +1,76 @@
+<!DOCTYPE html>
+<html lang="fr">
+<head>
+  <meta charset="UTF-8">
+  <meta n<nav style="background-color: #fff0f5; padding: 15px; text-align: center; box-shadow: 0 2px 5px rgba(0,0,0,0.1);">
+  <a href="index.html" style="margin: 0 15px; text-decoration: none; color: #c2185b; font-weight: bold;">Accueil</a>
+  <a href="evenements.html" style="margin: 0 15px; text-decoration: none; color: #c2185b; font-weight: bold;">Événements</a>
+  <a href="inscription.html" style="margin: 0 15px; text-decoration: none; color: #fff; background-color: #c2185b; padding: 8px 15px; border-radius: 8px; text-decoration: none;">💘 Inscription</a>
+  <a href="contact.html" style="margin: 0 15px; text-decoration: none; color: #c2185b; font-weight: bold;">Contact</a>
+</nav>
+ame="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Inscription – Soirée Real Love</title>
+  <style>
+    body 
+    {
+      background: linear-gradient(to right, #ffe0e9, #fff0f5);
+      font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+      text-align: center;
+      padding: 40px 20px;
+      color: #333;
+    }
+
+    .header-logo {
+      max-width: 300px;
+      margin-bottom: 20px;
+    }
+
+    h1 {
+      font-size: 32px;
+      color: #c2185b;
+      margin-bottom: 10px;
+    }
+
+    p {
+      font-size: 18px;
+      margin-bottom: 30px;
+    }
+
+    iframe {
+      border: none;
+      width: 100%;
+      max-width: 800px;
+      height: 2100px;
+      border-radius: 12px;
+      box-shadow: 0 4px 20px rgba(0,0,0,0.1);
+    }
+
+    .form-container {
+      display: flex;
+      flex-direction: column;
+      align-items: center;
+    }
+
+    @media (max-width: 768px) {
+      iframe {
+        height: 2300px;
+      }
+    }
+  </style>
+</head>
+<body>
+
+  <div class="form-container">
+    <img src="https://i.imgur.com/Uu6uM2W.png" alt="Real Love Logo" class="header-logo"> <!-- Bannière -->
+    <h1>Inscription à la soirée Real Love – Speed Dating</h1>
+    <p>Remplissez le formulaire ci-dessous pour réserver votre place 💘</p>
+
+    <iframe src="https://docs.google.com/forms/d/e/1FAIpQLSdSsX4jZBukXmuLlL_jFP7QVDqXTfsD6TLSk3oj4FaGvXYxaA/viewform?embedded=true"
+      frameborder="0" marginheight="0" marginwidth="0">
+      Chargement…
+    </iframe>
+  </div>
+
+</body>
+</html>
 
