--- a/date.html
+++ b/date.html
@@ -1,1 +1,11 @@
+<!DOCTYPE html>
+<html>
+  <head>
+    <title>Accueil</title>
+  </head>
+  <body>
+    <h1>Bienvenue sur Real Love</h1>
+    <a href="inscription.html">Aller au formulaire</a>
+  </body>
+</html>
 
